--- a/css/styles.css
+++ b/css/styles.css
@@ -2,19 +2,27 @@ body{
     font-family:'Roboto','Raleway',sans-serif;
     position: relative;
     color:#212121;
-    
+    background: #E5E5E5;
 } 
 :root {
     --brand-color: #2196F3;
     --second-color:#757575;
 }
-
+ul{
+    list-style: none;
+}
 /*кнопки*/
 button{
     background: #F5F4FA;
     cursor: pointer;
     font-family: 'Roboto';
     font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    border-radius: 4px;
+    border-color: #FFFFFF;
 }
 button:hover,
 button:focus{
@@ -24,6 +32,8 @@ button:focus{
 /*ссылки*/
 a{
     color: #212121;
+    text-decoration: none;
+    font-weight: 500;
 }
 a:hover,
 a:focus{
@@ -34,9 +44,21 @@ a:focus{
     color:var(--second-color) 
     
 }
-.telmail:hover,
-.telmail:focus{
-    color: var(--brand-color);
+.telmail2{
+    color:var(--second-color);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em; 
+}
+.address{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #FFFFFF;
+}
+address{
+    font-style: normal;
 }
 /*Логотип*/
 .logo{
@@ -44,6 +66,13 @@ a:focus{
     font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
+}
+.logodown{
+    color: #FFFFFF;
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
 }
 /*Страница портфолио*/
 .portfolio > h3{
@@ -57,13 +86,31 @@ a:focus{
 }
 /*Главная страница*/
 h1{
+    font-weight: 900;
     font-size: 44px;
-    line-height: 1.3;
+    line-height: 60px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+.h1{
+    background-color: #2F303A;
 }
 
 .order-services{
-    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    background-color: var(--brand-color);
+    color: #FFFFFF;
+    border-color: var(--brand-color);
+    border-radius: 4px;
 }
+
 .about-us > h3{
     font-size: 14px;
     line-height: 1.1;
@@ -85,4 +132,16 @@ h2{
     color: var(--second-color);
     font-size: 16px;
     line-height: 1.2;
+}
+.topick{
+    text-transform: uppercase;
+}
+footer{
+    background: #2F303A;
+}
+.part1{
+    color: var(--brand-color);
+}
+.p{
+    opacity: 0;
 }
